<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/donateToolbar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ColoredToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingHorizontal="@dimen/spacing_regular"
        android:paddingBottom="@dimen/spacing_regular"
        app:layout_constraintBottom_toTopOf="@id/donatePaymentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_big"
                android:text="@string/message_donate_us_title"
                android:textAppearance="@style/TextAppearance.DonateTitle"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_big"
                android:lineSpacingExtra="@dimen/spacing_small"
                android:text="@string/message_donate_us_content"
                android:textAppearance="@style/TextAppearance.Headline6"
                android:textSize="@dimen/font_regular" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:background="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/donatePaymentLabel" />

    <TextView
        android:id="@+id/donatePaymentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_big"
        android:paddingTop="@dimen/spacing_regular"
        android:text="@string/payment"
        android:textAppearance="@style/TextAppearance.DonateTitle"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/donateOptions"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <RadioGroup
        android:id="@+id/donateOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_big"
        android:checkedButton="@id/donateOptionPayPal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/donateAction"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart">

        <RadioButton
            android:id="@+id/donateOptionGooglePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:background="@drawable/donate_option_background"
            android:button="@null"
            android:enabled="false"
            android:paddingHorizontal="@dimen/spacing_regular"
            android:paddingVertical="@dimen/spacing_medium"
            android:text="@string/google_pay"
            android:textColor="@color/hint" />

        <RadioButton
            android:id="@+id/donateOptionPayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:background="@drawable/donate_option_background"
            android:button="@null"
            android:paddingHorizontal="@dimen/spacing_regular"
            android:paddingVertical="@dimen/spacing_medium"
            android:text="@string/paypal"
            android:textColor="@color/highlight"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/donateOptionCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:background="@drawable/donate_option_background"
            android:button="@null"
            android:paddingHorizontal="@dimen/spacing_regular"
            android:paddingVertical="@dimen/spacing_medium"
            android:text="@string/credit_card"
            android:textColor="@color/highlight" />

    </RadioGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/donateAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_regular"
        app:cardBackgroundColor="@color/warning"
        app:cardCornerRadius="@dimen/corner_radius_big"
        app:contentPadding="@dimen/spacing_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintWidth_max="@dimen/width_donate_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate_us"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_regular" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_regular" />


</androidx.constraintlayout.widget.ConstraintLayout>