<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/loginImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_regular"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_max="@dimen/size_login_image_max"
            app:layout_constraintWidth_percent="0.35"
            app:roundPercent="@dimen/round_percent_circle"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.BrandTitle"
            app:layout_constraintEnd_toEndOf="@id/spacingEnd"
            app:layout_constraintStart_toStartOf="@id/spacingStart"
            app:layout_constraintTop_toBottomOf="@id/loginImage" />

        <pl.tkadziolka.snipmeandroid.util.view.OutlinedTextInput
            android:id="@+id/loginName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:hint="@string/prompt_login"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/spacingEnd"
            app:layout_constraintStart_toStartOf="@id/spacingStart"
            app:layout_constraintTop_toBottomOf="@id/loginTitle" />

        <pl.tkadziolka.snipmeandroid.util.view.OutlinedTextInput
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:hint="@string/prompt_password"
            android:password="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/spacingEnd"
            app:layout_constraintStart_toStartOf="@id/spacingStart"
            app:layout_constraintTop_toBottomOf="@id/loginName"
            tools:alpha="0.5"
            tools:visibility="visible" />

        <pl.tkadziolka.snipmeandroid.util.view.OutlinedTextInput
            android:id="@+id/loginPasswordRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:hint="@string/prompt_password_repeat"
            android:password="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/spacingEnd"
            app:layout_constraintStart_toStartOf="@id/spacingStart"
            app:layout_constraintTop_toBottomOf="@id/loginPassword"
            tools:alpha="0.5"
            tools:text="Password"
            tools:visibility="visible" />

        <pl.tkadziolka.snipmeandroid.util.view.OutlinedTextInput
            android:id="@+id/loginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:hint="@string/prompt_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/spacingEnd"
            app:layout_constraintStart_toStartOf="@id/spacingStart"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordRepeat"
            tools:alpha="0.5"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loginError"
            style="@style/WarningField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/spacingEnd"
            app:layout_constraintStart_toStartOf="@id/spacingStart"
            app:layout_constraintTop_toBottomOf="@id/loginEmail"
            tools:alpha="0.5"
            tools:text="@string/validation_password_wrong"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loginRegisterAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            app:layout_constraintBottom_toTopOf="@id/loginSheet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/spacing"
            android:textStyle="bold" />

        <View
            android:id="@+id/loginSheet"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginHelper" />

        <TextView
            android:id="@+id/loginHelper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:layout_marginBottom="@dimen/spacing_regular"
            android:paddingTop="@dimen/spacing_regular"
            android:text="@string/call_login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.BottomTitle"
            app:layout_constraintBottom_toTopOf="@id/loginAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginError"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/loginAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_big"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/arrow_right"
            app:tint="@color/accent" />

        <TextView
            android:id="@+id/loginVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.VersionLabel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="v1.0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/spacingStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_regular" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/spacingEnd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_regular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>